--- a/auctionsite-n23/src/app/globals.css
+++ b/auctionsite-n23/src/app/globals.css
@@ -8,8 +8,19 @@ main {
   width: 100%;
   height: 100%;
   font-family: monospace;
-  background-color: #000;
-  color: #fff;
+
+}
+
+@font-face {
+  font-family: 'CustomFont';
+  /* Choose a name for your font */
+  src: url('../assets/fonts/Lemon-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+h6 {
+  font-family: 'customFont';
 }
 
 * {
@@ -44,6 +55,7 @@ p {
   position: sticky;
   top: 0;
   height: 100vh;
+
 
 }
 
@@ -91,4 +103,60 @@ img {
     gap: 1rem;
     padding: 0 vw;
   }
+}
+
+
+
+.login-btn {
+
+  color: #d4d4d4;
+  cursor: pointer;
+  text-align: center;
+  padding: 1.5rem;
+  border: 0;
+  transition: all 0.5s;
+  border-radius: 10px;
+  width: auto;
+  position: relative;
+
+}
+
+/* Styles for the DoorOpenIcon container */
+.login-btn .door-icon {
+  position: absolute;
+  left: 80%;
+  top: 54%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
+/* Your existing styles for .login-btn::after */
+.login-btn::after {
+  content: "\f2f6";
+  font-family: "Font Awesome 5 Pro";
+  font-weight: 400;
+  position: absolute;
+  left: 80%;
+  top: 54%;
+  right: 0;
+  bottom: 0;
+  opacity: 0;
+  transform: translate(-50%, -50%);
+}
+
+/* Hover styles for .login-btn */
+.login-btn:hover {
+  background: #29292d;
+  transition: all 0.5s;
+  border-radius: 10px;
+  box-shadow: 0px 6px 15px #33650861;
+  padding: 1.5rem 6rem 1.5rem 2.5rem;
+  color: #ffffff;
+}
+
+/* Hover styles for .door-icon */
+.login-btn:hover .door-icon {
+  opacity: 1;
+  transition: opacity 0.5s;
 }
